--- a/themes/FleetManagement/templates/layout/page.html.twig
+++ b/themes/FleetManagement/templates/layout/page.html.twig
@@ -138,17 +138,22 @@
 {% else %}
 
 {{ attach_library("fleet_management_theme/back-style") }}
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/modernizr.min.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/jquery-3.2.1.min.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/popper.min.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/bootstrap.min.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/jquery-jvectormap.min.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/jquery-jvectormap-world-mill.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/custom-vector.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/charts/js/raphael-min.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/charts/js/morris.min.js"></script>
-<link rel="stylesheet" href="/AWFleetManagement/themes/FleetManagement/assets/back/charts/css/morris.css">
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/modernizr.min.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/jquery-3.2.1.min.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/popper.min.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/bootstrap.min.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/jquery-jvectormap.min.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/jquery-jvectormap-world-mill.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/custom-vector.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/charts/js/raphael-min.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/charts/js/morris.min.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/css/sweetalert2.min.css"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/sweetalert2.all.js"></script>
+<link
+  rel="stylesheet"
+  href="{{ url('<front>') }}themes/FleetManagement/assets/back/charts/css/morris.css"
+/>
+{# <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> #}
 <!-- Pre Loader -->
 <div class="loading">
   <div class="spinner">
@@ -161,13 +166,10 @@
   <!-- Sidebar -->
   <nav id="sidebar" class="lorvens-bg">
     <div class="sidebar-header">
-      {% if role == 'company' %} 
-        {% set home_url = base_url ~ '/company/dashboard' %} 
-      {% elseif role == 'operator' %}
-        {% set home_url = base_url ~ '/operator/dashboard' %} 
-      {% elseif role == 'administrator' %}
-        {% set home_url = base_url ~ '/admin/dashboard' %}
-      {% endif %}
+      {% if role == 'company' %} {% set home_url = base_url ~
+      '/company/dashboard' %} {% elseif role == 'operator' %} {% set home_url =
+      base_url ~ '/operator/dashboard' %} {% elseif role == 'administrator' %}
+      {% set home_url = base_url ~ '/admin/dashboard' %} {% endif %}
       <a href="{{ home_url }}"><h5 class="logo" alt="logo">DIGIFLEET</h5></a>
     </div>
     {% if expiry_status != 'expired' %}
@@ -186,6 +188,23 @@
       <div class="container-fluid">
         <div class="navbar-header"></div>
         <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+              <span class="ti-announcement"></span>
+            </a>
+            <div class="dropdown-menu lorvens-box-shadow notifications animated flipInY">
+              <h5>Notifications</h5>
+              {% if notifications | json_decode %}
+                {% for notification in notifications | json_decode %}  
+                  <a class="dropdown-item" href="#">
+                    <span class="{{ notification.icon }}"></span> {{ notification.title }}</a>
+                    {% endfor %}
+                  {% else %}
+                  <a class="dropdown-item" href="#">
+                    <span class="ti-info"></span> No Notification Yet!</a>
+              {% endif %}
+            </div>
+          </li>
           <li class="nav-item">
             <a
               class="nav-link dropdown-toggle"
@@ -243,31 +262,99 @@
 <!-- Back to Top -->
 
 <!-- 
-File Include
+  File Include
 -->
-<a id="back-to-top" href="#" class="back-to-top fenil">
+<a id="back-to-top" href="#" class="back-to-top">
   <span class="ti-angle-up"></span>
 </a>
 <script>
   var package = document.getElementById("package").value;
   // console.log(package);
   if (package == "expired") {
-    swal(
-      {
-        title: "package Expired!",
-        text: "Please Renew your package!",
-        icon: "error",
-        button: "Renew!",
-        closeOnClickOutside: false,
-        closeOnEsc: false,
-        dangerMode: true,
-      });
-      $('.swal-button').on('click',function(){
-        window.location.href = 'https://www.google.com/';
-      });
+    // Swal.fire({
+    //   title: "package Expired!",
+    //   text: "Please Renew your package!",
+    //   icon: "error",
+    //   button: "Renew!",
+    //   closeOnClickOutside: false,
+    //   closeOnEsc: false,
+    //   dangerMode: true,
+    // });
+    // $(".swal-button").on("click", function () {
+    //   window.location.href = "https://www.google.com/";
+    // });
+    Swal.fire({
+      title: 'Package Expired!',
+      text: "Please Renew Your Package!",
+      icon: 'error',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Renew!',
+      cancelButtonText: 'Logout',
+      allowOutsideClick: false,
+      allowEscapeKey: false,
+      allowEnterKey:false,
+      showClass: {
+        popup: 'swal2-noanimation',
+        backdrop: 'swal2-noanimation'
+      },
+      hideClass: {
+        popup: '',
+        backdrop: ''
+      }
+    }).then((result) => {
+      console.log(result);
+      if (result.isConfirmed) {
+        window.location.href = "https://www.google.com/";
+      }
+      if(result.isDismissed){
+        // window.location.href = "https://www.google.com/";
+        window.location.href = '{{ base_url }}/user/logout';
+      }
+    })
   }
+  
+  // $('#liveToastBtn').on('click',function(){
+  //   const Toast = Swal.mixin({
+  //     toast: true,
+  //     position: 'bottom-end',
+  //     showConfirmButton: false,
+  //     timer: 3000,
+  //     timerProgressBar: true,
+  //     didOpen: (toast) => {
+  //       toast.addEventListener('mouseenter', Swal.stopTimer)
+  //       toast.addEventListener('mouseleave', Swal.resumeTimer)
+  //     }
+  //   });
+  //   toastcall('success','SignUp Successful!!!');
+  // });
+  
+  // // toastcall( '{{ icon }}' , '{{ title }}');
+  // function toastcall(icon,title){
+  //   const Toast = Swal.mixin({
+  //     toast: true,
+  //     position: 'bottom-end',
+  //     showConfirmButton: false,
+  //     timer: 3000,
+  //     timerProgressBar: true,
+  //     didOpen: (toast) => {
+  //       toast.addEventListener('mouseenter', Swal.stopTimer)
+  //       toast.addEventListener('mouseleave', Swal.resumeTimer)
+  //     }
+  //   });
+  //   Toast.fire({
+  //     icon: icon,
+  //     title: title,
+  //   });
+  // }
 </script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="/AWFleetManagement/themes/FleetManagement/assets/back/js/custom.js"></script>
+  {# {% for notification in popup %}
+  <script> toastcall("{{ notification.icon }}" , '{{ notification.title }}'); </script>    
+  {% endfor %} #}
+{# <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> #}
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/sweetalert2.all.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/custom.js"></script>
+<script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/bootstrap.min.js"></script>
 
 {% endif %}
