--- a/themes/FleetManagement/templates/views/views-view-field.html.twig
+++ b/themes/FleetManagement/templates/views/views-view-field.html.twig
@@ -20,6 +20,6 @@
  * @ingroup themeable
  */
 #}
-<div class="mg-top-10 mg-left-10">
-    {{ output -}}
+<div class="mg-top-10 mg-left-10 table_link">
+    {{ output }}
 </div>
