--- a/themes/FleetManagement/templates/views/views-view-table.html.twig
+++ b/themes/FleetManagement/templates/views/views-view-table.html.twig
@@ -74,6 +74,7 @@
           set column_classes = [
           'views-field',
           'views-field-' ~ fields[key],
+          'table_heading',
           ]
           %}
           {% endif %}
