--- a/themes/FleetManagement/templates/block/block.html.twig
+++ b/themes/FleetManagement/templates/block/block.html.twig
@@ -102,7 +102,6 @@
       </div>
     </div>
       <script>
-  // var ctx = document.getElementById("barMorris");
     var graphdata3 = $("#tripanalysis").val();
     if( graphdata3 == '""'){
           $('.trip_analysis').addClass('d-none');
@@ -128,20 +127,27 @@
     {% set ecount = content['#markup'] | json_decode %}
     <div class="row">
       <div class="col-md-12">
-        <div class="widget-area lorvens-box-shadow color-blue">
-          <div class="widget-left">
+        <div class="widget-area lorvens-box-shadow totalemployee text-white bg-danger">
+          <div class="widget-left text-white">
             <span class="ti-user"></span>
           </div>
           <div class="widget-right">
             <h3 class="wiget-title font-weight-bold">Total Employees</h3>
-            <span class="numeric color-blue">{{ ecount[0].total_emp }}</span>
+            <span class="numeric" id="totalemployee">{{ ecount[0].total_emp }}</span>
           </div>
           <footer class="pd-top-10 pd-bottom-10 col-md-12">
-            <div class="text-right lorvens-text-color">
+            <div class="text-right">
               <a href="{{ url('<front>') }}employeelist">View More</a>
               <a href="{{ url('<front>') }}node/add/driver" class="ml-3 add_new">Add New</a>
             </div>
           </footer>
+          <script>
+            var totalemployee = $("#totalemployee").html();
+            // console.log(totalemployee);
+            if(!totalemployee){
+                  $('.totalemployee').addClass('d-none');
+                }
+        </script>
         </div>
       </div>
     </div>
@@ -151,16 +157,16 @@
     {% set bcount = content['#markup'] | json_decode %}
     <div class="row">
       <div class="col-md-12">
-        <div class="widget-area lorvens-box-shadow color-green">
-          <div class="widget-left">
+        <div class="widget-area lorvens-box-shadow text-white bg-info">
+          <div class="widget-left text-white">
             <span class="ti-layout-grid3-alt"></span>
           </div>
           <div class="widget-right">
             <h3 class="wiget-title font-weight-bold">Total Branches</h3>
-            <span class="numeric color-green">{{ bcount[0].total_branches }}</span>
+            <span class="numeric text-white">{{ bcount[0].total_branches }}</span>
           </div>
           <footer class="pd-top-10 pd-bottom-10 col-md-12">
-            <div class="text-right lorvens-text-color">
+            <div class="text-right text-white">
               <a href="{{ url('<front>') }}branch-list">View More</a>
               <a href="{{ url('<front>') }}node/add/branches" class="ml-3">Add New</a>
             </div>
@@ -174,20 +180,27 @@
     {% set vcount = content['#markup'] | json_decode %}
     <div class="row">
       <div class="col-md-12">
-        <div class="widget-area lorvens-box-shadow color-green">
-          <div class="widget-left">
+        <div class="widget-area lorvens-box-shadow totalvehicle text-white bg-success">
+          <div class="widget-left text-white">
             <span class="ti-car"></span>
           </div>
           <div class="widget-right">
             <h3 class="wiget-title font-weight-bold">Total Vehicles</h3>
-            <span class="numeric color-green">{{ vcount[0].total_vehicle }}</span>
+            <span class="numeric text-white" id="totalvehicle">{{ vcount[0].total_vehicle }}</span>
           </div>
           <footer class="pd-top-10 pd-bottom-10 col-md-12">
-            <div class="text-right lorvens-text-color">
+            <div class="text-right text-white">
               <a href="{{ url('<front>') }}vehicles">View More</a>
               <a href="{{ url('<front>') }}node/add/vehicle" class="ml-3">Add New</a>
             </div>
           </footer>
+          <script>
+            var totalvehicle = $("#totalvehicle").html();
+            // console.log(totalvehicle);
+            if(!totalvehicle){
+                  $('.totalvehicle').addClass('d-none');
+                }
+        </script>
         </div>
       </div>
     </div>
@@ -197,16 +210,16 @@
     {% set dcount = content['#markup'] | json_decode %}
     <div class="row">
       <div class="col-md-12">
-        <div class="widget-area lorvens-box-shadow color-blue">
-          <div class="widget-left">
+        <div class="widget-area lorvens-box-shadow text-white bg-warning">
+          <div class="widget-left text-white">
             <span class="ti-briefcase"></span>
           </div>
           <div class="widget-right">
             <h3 class="wiget-title font-weight-bold">Total Departments</h3>
-            <span class="numeric color-blue">{{ dcount[0].total_department }}</span>
+            <span class="numeric text-white">{{ dcount[0].total_department }}</span>
           </div>
           <footer class="pd-top-10 pd-bottom-10 col-md-12">
-            <div class="text-right lorvens-text-color">
+            <div class="text-right text-white">
               <a href="{{ url('<front>') }}department-list">View More</a>
               <a href="{{ url('<front>') }}node/add/departments" class="ml-3">Add New</a>
             </div>
@@ -226,7 +239,6 @@
       </div>
     </div>
       <script>
-  // var ctx = document.getElementById("barMorris");
     var graphdata2 = $("#accidentanalysis").val();
     if( graphdata2 == '""'){
           $('.accident_analysis').addClass('d-none');
@@ -258,7 +270,6 @@
       </div>
     </div>
       <script>
-  // var ctx = document.getElementById("barMorris");
     var graphdata2 = $("#fuel_filling").val();
     if( graphdata2 == '""'){
           $('.fuel_filling').addClass('d-none');
@@ -300,20 +311,27 @@
     {% set vcount = content['#markup'] | json_decode %}
     <div class="row">
       <div class="col-md-12">
-        <div class="widget-area lorvens-box-shadow color-green">
-          <div class="widget-left">
+        <div class="widget-area lorvens-box-shadow totalvehicle text-white bg-success">
+          <div class="widget-left text-white">
             <span class="ti-car"></span>
           </div>
           <div class="widget-right">
             <h3 class="wiget-title font-weight-bold">Total Vehicles</h3>
-            <span class="numeric color-green">{{ vcount[0].total_vehicle }}</span>
+            <span class="numeric text-white" id="totalvehicle">{{ vcount[0].total_vehicle }}</span>
           </div>
           <footer class="pd-top-10 pd-bottom-10 col-md-12">
-            <div class="text-right lorvens-text-color">
+            <div class="text-right text-white">
               <a href="{{ url('<front>') }}vehicles">View More</a>
               <a href="{{ url('<front>') }}node/add/vehicle" class="ml-3">Add New</a>
             </div>
           </footer>
+          <script>
+            var totalvehicle = $("#totalvehicle").html();
+            // console.log(totalvehicle);
+            if(!totalvehicle){
+                  $('.totalvehicle').addClass('d-none');
+                }
+        </script>
         </div>
       </div>
     </div>
@@ -329,7 +347,6 @@
       </div>
     </div>
       <script>
-  // var ctx = document.getElementById("barMorris");
     var graphdata2 = $("#accidentanalysis").val();
     if( graphdata2 == '""'){
           $('.accident_analysis').addClass('d-none');
@@ -355,20 +372,27 @@
     {% set ecount = content['#markup'] | json_decode %}
     <div class="row">
       <div class="col-md-12">
-        <div class="widget-area lorvens-box-shadow color-blue">
-          <div class="widget-left">
+        <div class="widget-area lorvens-box-shadow totalemployee text-white bg-danger">
+          <div class="widget-left text-white">
             <span class="ti-user"></span>
           </div>
           <div class="widget-right">
             <h3 class="wiget-title font-weight-bold">Total Employees</h3>
-            <span class="numeric color-blue">{{ ecount[0].total_emp }}</span>
+            <span class="numeric" id="totalemployee">{{ ecount[0].total_emp }}</span>
           </div>
           <footer class="pd-top-10 pd-bottom-10 col-md-12">
-            <div class="text-right lorvens-text-color">
+            <div class="text-right">
               <a href="{{ url('<front>') }}employeelist">View More</a>
               <a href="{{ url('<front>') }}node/add/driver" class="ml-3 add_new">Add New</a>
             </div>
           </footer>
+          <script>
+            var totalemployee = $("#totalemployee").html();
+            // console.log(totalemployee);
+            if(!totalemployee){
+                  $('.totalemployee').addClass('d-none');
+                }
+        </script>
         </div>
       </div>
     </div>
@@ -378,16 +402,16 @@
     {% set bcount = content['#markup'] | json_decode %}
     <div class="row">
       <div class="col-md-12">
-        <div class="widget-area lorvens-box-shadow color-green">
-          <div class="widget-left">
+        <div class="widget-area lorvens-box-shadow text-white bg-info">
+          <div class="widget-left text-white">
             <span class="ti-layout-grid3-alt"></span>
           </div>
           <div class="widget-right">
             <h3 class="wiget-title font-weight-bold">Total Branches</h3>
-            <span class="numeric color-green">{{ bcount[0].total_branches }}</span>
+            <span class="numeric text-white">{{ bcount[0].total_branches }}</span>
           </div>
           <footer class="pd-top-10 pd-bottom-10 col-md-12">
-            <div class="text-right lorvens-text-color">
+            <div class="text-right text-white">
               <a href="{{ url('<front>') }}branch-list">View More</a>
               <a href="{{ url('<front>') }}node/add/branches" class="ml-3">Add New</a>
             </div>
@@ -430,7 +454,6 @@
       </div>
     </div>
       <script>
-  // var ctx = document.getElementById("barMorris");
     var graphdata2 = $("#tripanalysis").val();
     if( graphdata2 == '""'){
           $('.trip_analysis').addClass('d-none');
@@ -519,7 +542,6 @@
       </div>
     </div>
       <script>
-  // var ctx = document.getElementById("barMorris");
     var graphdata2 = $("#fuel_filling").val();
     if( graphdata2 == '""'){
           $('.fuel_filling').addClass('d-none');
@@ -566,7 +588,6 @@
       </div>
     </div>
       <script>
-  // var ctx = document.getElementById("barMorris");
     var graphdata2 = $("#numberofcompany").val();
     if( graphdata2 == '""'){
           $('.number_of_companies').addClass('d-none');
