--- a/themes/FleetManagement/templates/layout/container.html.twig
+++ b/themes/FleetManagement/templates/layout/container.html.twig
@@ -28,6 +28,7 @@
   ]
 %}
 {% if attributes.id == 'edit-actions' %}
+<div class="break"></div>
 <div{{ attributes.addClass(classes).addClass('d-flex') }}>{{ children }}</div>
 {% elseif attributes.id == 'edit-body-0-format-help' %}
 <div{{ attributes.addClass('d-none') }}>{{ children }}</div>
