--- a/themes/FleetManagement/templates/views/views-view-table.html.twig
+++ b/themes/FleetManagement/templates/views/views-view-table.html.twig
@@ -38,7 +38,7 @@
     'cols-' ~ header|length,
     responsive ? 'responsive-enabled',
     sticky ? 'sticky-enabled',
-    'table table-hover view-table',
+    'table view-table table-striped',
   ]
 %}
 <div class="col-md-12">
